--- a/index.html
+++ b/index.html
@@ -1,1 +1,80 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>TokSing</title>
+</head>
+<body>
+    <h1>TokSing-demo</h1>
+    <div style="display: flex;">
+        <div style="flex: 33.33%; padding: 10px;">
+            <h2>GT</h2>
+            <audio controls>
+                <source src="./wavs/GT/opencpop_2093003461.wav" type="audio/wav">
+                Your browser does not support the audio element.
+            </audio>
+        </div>
+        <div style="flex: 33.33%; padding: 10px;">
+            <h2>discrete</h2>
+            <audio controls>
+                <source src="wavs/discrete/opencpop_2093003461.wav" type="audio/wav">
+                Your browser does not support the audio element.
+            </audio>
+        </div>
+        <div style="flex: 33.33%; padding: 10px;">
+            <h2>w/o melody</h2>
+            <audio controls>
+                <source src="wavs/w\/o melody/opencpop_2093003461.wav" type="audio/wav">
+                Your browser does not support the audio element.
+            </audio>
+        </div>
+    </div>
+    <div style="display: flex;">
+        <div style="flex: 33.33%; padding: 10px;">
+            <h2>GT</h2>
+            <audio controls>
+                <source src="wavs/GT/opencpop_2044001669.wav" type="audio/wav">
+                Your browser does not support the audio element.
+            </audio>
+        </div>
+        <div style="flex: 33.33%; padding: 10px;">
+            <h2>discrete</h2>
+            <audio controls>
+                <source src="wavs/discrete/opencpop_2044001669.wav" type="audio/wav">
+                Your browser does not support the audio element.
+            </audio>
+        </div>
+        <div style="flex: 33.33%; padding: 10px;">
+            <h2>w/o melody</h2>
+            <audio controls>
+                <source src="wavs/w\/o melody/opencpop_2044001669.wav" type="audio/wav">
+                Your browser does not support the audio element.
+            </audio>
+        </div>
+    </div>
+    <div style="display: flex;">
+        <div style="flex: 33.33%; padding: 10px;">
+            <h2>GT</h2>
+            <audio controls>
+                <source src="wavs/GT/opencpop_2086003190.wav" type="audio/wav">
+                Your browser does not support the audio element.
+            </audio>
+        </div>
+        <div style="flex: 33.33%; padding: 10px;">
+            <h2>discrete</h2>
+            <audio controls>
+                <source src="wavs/discrete/opencpop_2086003190.wav" type="audio/wav">
+                Your browser does not support the audio element.
+            </audio>
+        </div>
+        <div style="flex: 33.33%; padding: 10px;">
+            <h2>w/o melody</h2>
+            <audio controls>
+                <source src="wavs/w\/o melody/opencpop_2086003190.wav" type="audio/wav">
+                Your browser does not support the audio element.
+            </audio>
+        </div>
+    </div>
+</body>
+</html>
