--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div style="flex: 33.33%; padding: 10px;">
             <h2>w/o melody</h2>
             <audio controls>
-                <source src="wavs/w\/o melody/opencpop_2093003461.wav" type="audio/wav">
+                <source src="wavs/w_o_melody/opencpop_2093003461.wav" type="audio/wav">
                 Your browser does not support the audio element.
             </audio>
         </div>
@@ -48,7 +48,7 @@
         <div style="flex: 33.33%; padding: 10px;">
             <h2>w/o melody</h2>
             <audio controls>
-                <source src="wavs/w\/o melody/opencpop_2044001669.wav" type="audio/wav">
+                <source src="wavs/w_o_melody/opencpop_2044001669.wav" type="audio/wav">
                 Your browser does not support the audio element.
             </audio>
         </div>
@@ -71,7 +71,7 @@
         <div style="flex: 33.33%; padding: 10px;">
             <h2>w/o melody</h2>
             <audio controls>
-                <source src="wavs/w\/o melody/opencpop_2086003190.wav" type="audio/wav">
+                <source src="wavs/w_o_melody/opencpop_2086003190.wav" type="audio/wav">
                 Your browser does not support the audio element.
             </audio>
         </div>
